[gd_scene load_steps=16 format=2]

[ext_resource path="res://CreateList.gd" type="Script" id=1]
[ext_resource path="res://CreateBench.gd" type="Script" id=2]
[ext_resource path="res://asserts/art/backspaceButton.png" type="Texture" id=3]
[ext_resource path="res://asserts/art/totalBlack.png" type="Texture" id=4]
[ext_resource path="res://asserts/art/confirmButton.png" type="Texture" id=5]
[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=6]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=7]
[ext_resource path="res://CreateScene.gd" type="Script" id=8]
[ext_resource path="res://asserts/themes/大号正文字体.tres" type="Theme" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="CreateScene" type="Node2D"]
script = ExtResource( 8 )

[node name="CreateBench" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ConfirmButton" type="TextureButton" parent="CreateBench"]
margin_left = 688.0
margin_top = 168.0
margin_right = 776.0
margin_bottom = 232.0
texture_normal = ExtResource( 5 )
expand = true

[node name="BackspaceButton" type="TextureButton" parent="CreateBench"]
margin_left = 792.0
margin_top = 168.0
margin_right = 888.0
margin_bottom = 232.0
texture_normal = ExtResource( 3 )
expand = true

[node name="CurrentWord" type="Label" parent="CreateBench"]
margin_left = 80.0
margin_top = 168.0
margin_right = 664.0
margin_bottom = 232.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
align = 1
valign = 1

[node name="Line" type="TextureRect" parent="CreateBench"]
margin_left = 136.0
margin_top = 232.0
margin_right = 664.0
margin_bottom = 240.0
texture = ExtResource( 4 )
expand = true

[node name="CreateList" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="CreateList"]
margin_left = 129.0
margin_top = 328.0
margin_right = 896.0
margin_bottom = 960.0
theme = ExtResource( 6 )
custom_colors/guide_color = Color( 0.47451, 0.333333, 0.282353, 1 )
custom_colors/font_color = Color( 0.831373, 0.631373, 0.372549, 1 )
custom_constants/hseparation = 30
custom_styles/cursor = SubResource( 1 )
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/cursor_unfocused = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_text_lines = 2
max_columns = 3
same_column_width = true

[node name="Title" type="Label" parent="."]
margin_left = 416.0
margin_top = 80.0
margin_right = 616.0
margin_bottom = 155.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "单词合成"
align = 1
valign = 1
